@@ -1,3 +1,12 @@
+2006-10-10  Miguel Sofer  <msofer@users.sf.net>
+	
+	* tests/namespace-old.test (5.4 6.12,14,15):
+	* tests/namespace.test (14.3,12 17.7,10 34.7): adapted tests to
+	[Tip 278] functionality. 
+
+	* tests/namespace.test (namespace-14.5): refer to global vars
+	explicitly (not what was being tested). Missed in the big patch. 
+
 2006-10-09  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclNamesp.c (Tcl_FindNamespaceVar): second change
